fix: add whitespace between hero content and hero image

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ footer a.btn:hover::after {
         width: 64rem;
         position: absolute;
         top: -7rem;
-        right: -28rem;
+        right: -30rem;
     }
 
     .hero-image img {
